Fix bottom gap + link logo + wrap text

--- a/www/modules/memo/assets/styles/src/objects/_block-grid.scss
+++ b/www/modules/memo/assets/styles/src/objects/_block-grid.scss
@@ -3,8 +3,8 @@
 // ==========================================================================
 .o-block-grid {
 	@include grid;
-	height: 100vh;
 	margin-left: -1px;
+	height: 100%;
 }
 
 .o-block-grid_item {
